Actualizado la memoria de latex, eliminado la carpeta intermedia

--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -140,3 +140,48 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	urldate = {2019-06-13},
 	file = {Token para ingreso - MoodleDocs:C\:\\Users\\PC\\Zotero\\storage\\QDKA9BFB\\Token_para_ingreso.html:text/html}
 }
+
+@misc{noauthor_<input_nodate,
+	title = {{\textless}input type="hidden"{\textgreater}},
+	url = {https://developer.mozilla.org/es/docs/Web/HTML/Elemento/input/hidden},
+	abstract = {input elements of type "hidden" let web developers include data that cannot be seen or modified by users when a form is submitted. For example, the ID of the content that is currently being ordered or edited, or a unique security token. Hidden inputs are completely invisible in the rendered page, and there is no way to make it visible in the page's content.},
+	language = {es},
+	urldate = {2019-06-13},
+	journal = {Documentación web de MDN},
+	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\WRQK2YR6\\hidden.html:text/html}
+}
+
+@misc{noauthor_html_nodate,
+	title = {{HTML} input type="hidden"},
+	url = {https://www.w3schools.com/tags/att_input_type_hidden.asp},
+	urldate = {2019-06-13},
+	file = {HTML input type="hidden":C\:\\Users\\PC\\Zotero\\storage\\ZSHT47B8\\att_input_type_hidden.html:text/html}
+}
+
+@misc{noauthor_moodle_nodate-1,
+	title = {Moodle demo},
+	url = {https://moodle.org/demo/},
+	urldate = {2019-06-13},
+	file = {Moodle demo:C\:\\Users\\PC\\Zotero\\storage\\2X828YFS\\demo.html:text/html}
+}
+
+@misc{noauthor_html_nodate-1,
+	title = {{HTML} input type="hidden"},
+	url = {https://www.w3schools.com/tags/att_input_type_hidden.asp},
+	urldate = {2019-06-14},
+	file = {HTML input type="hidden":C\:\\Users\\PC\\Zotero\\storage\\VWGEDXDR\\att_input_type_hidden.html:text/html}
+}
+
+@misc{marti_que_2016,
+	title = {Qué es el {Web} scraping? {Introducción} y herramientas},
+	shorttitle = {Qué es el {Web} scraping?},
+	url = {https://sitelabs.es/web-scraping-introduccion-y-herramientas/},
+	abstract = {El web scraping es una técnica que sirve para extraer información de páginas web de forma automatizada. Si traducimos del …},
+	language = {es},
+	urldate = {2019-06-15},
+	journal = {Sitelabs},
+	author = {Martí, Marq},
+	month = apr,
+	year = {2016},
+	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\8UFE8SMV\\web-scraping-introduccion-y-herramientas.html:text/html}
+}
