--- a/latex/memoria.tex
+++ b/latex/memoria.tex
@@ -427,11 +427,16 @@ Dr. Carlos Pardo Aguilar
 % Abstract en castellano
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
-UBUMonitor es una aplicación de escritorio hecho en Java orientado a docentes que usen los servicios de Moodle. Permite a los profesores, previa identificación, acceder a datos estadísticos diferentes sobre las calificaciones y registros de los alumnos. 
 
-La aplicación continua el desarrollo de dos proyectos diferentes, UBUGrades que trata sobre las calificaciones y UBULogs de los registros. Se han integrado ambos desarrollos en uno único, usando la primera como base y reescribiendo totalmente la segunda.
+El auge de las tecnologías ha alcanzado el ámbito educacional con las aulas de aprendizaje \textit{online} y enseñanza virtual con Moodle como uno de los protagonistas más importantes.
 
-Se ha centrado también en la refactorización del código, guardar los datos en ficheros cifrados y nuevos gráficos para los registros de accesos.
+Este hecho ha transformado también el método de seguimiento de la evolución del alumnado durante el curso.
+
+En Moodle permite el seguimiento mediante la visualización de las calificaciones  y los registros de acceso de los alumnos. Sin embargo la forma de mostrar las calificaciones y registros de acceso al curso de los alumnos en Moodle es bastante laxa y poco práctica. Este inconveniente ha motivado la creación del presente proyecto como solución.
+
+UBUMonitor es una aplicación de escritorio hecho en Java orientado a docentes que usen los servicios de Moodle. Permite a los profesores, previa identificación, acceder a datos estadísticos diferentes sobre las calificaciones y registros de los alumnos y mostrarlos en distintos tipos de gráficas, una forma mucho más práctica y visual. 
+
+
 \end{abstract}
 
 \renewcommand*\abstractname{Descriptores}
@@ -449,7 +454,7 @@ A \textbf{brief} presentation of the topic addressed in the project.
 
 \renewcommand*\abstractname{Keywords}
 \begin{abstract}
-Moodle,Educational data mining, Visualization, JavaFX, Web services, JSON, ChartJs.
+Moodle, Educational data mining, Visualization, JavaFX, Web services, JSON, ChartJs.
 \end{abstract}
 
 \clearpage
@@ -475,9 +480,9 @@ Moodle,Educational data mining, Visualization, JavaFX, Web services, JSON, Chart
 \include{./tex/6_Trabajos_relacionados}
 \include{./tex/7_Conclusiones_Lineas_de_trabajo_futuras}
 
-\bibliographystyle{plainnat}
 \bibliography{bibliografia}
 
+\bibliographystyle{plainnat}
 
 
 \end{document}
