Actualizado la memoria

--- a/latex/tex/3_Conceptos_teoricos.tex
+++ b/latex/tex/3_Conceptos_teoricos.tex
@@ -28,12 +28,12 @@ Las categorías de cursos\cite{noauthor_course_nodate-1} (en inglés \textit{cou
 
 \imagen{course_categories}{Ejemplo de categorías del curso enmarcados en rojo.}
 
-\section{Registros}
+\subsection{Registros}
 Los registros es un reporte de actividades realizadas por los usuarios, existe registros de sitio web y del curso. En este proyecto solo nos centraremos en el segundo caso, estos se acceden en desde el curso en la rueda de configuración \textit{Aún más... ->  Informes ->  Registros -> Conseguir estos registros}
 
 \imagen{registros}{Ejemplo de varias entradas de un registro.}
 
-\subsection{Columnas de los registros}
+\subsubsection{Columnas de los registros}
 Todas las entradas del registros se muestra en una tabla con varias columnas: 
 \begin{enumerate}
 	\item \textbf{Hora}: La fecha y hora.
@@ -49,11 +49,14 @@ Todas las entradas del registros se muestra en una tabla con varias columnas:
 		\item Web: página web.
 		\item CLI: desde el servidor.
 	\end{itemize}
-	\item \textbf{Dirección IP}: la dirección IP del dispositivo.
+	\item \textbf{Dirección IP}: la dirección IP del dispositivo que ha activado el registro.
 	
 \end{enumerate}
 
-\subsection{Problema de visualización}
+\subsubsection{Opciones y descarga}
+También ofrece la posibilidad de filtrar mediante diferente filtros y su descarga en varios formatos de texto (CSV, Excel, HTML, JSON, etc).
+
+\subsubsection{Problema de visualización}
 
 El problema de los registros que ofrece Moodle es la laxa forma de visualizar los datos a pesar de las opciones de filtrado. Sobre todo la información de las \textbf{Descripciones} es confusa al mostrar los id's de usuarios, módulos del curso, etc...
 
