--- a/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -74,7 +74,7 @@ El presente proyecto está realizado en \LaTeX usando las versiones portables de
 \section{Python}
 \href{https://www.python.org/}{Python} es un lenguaje de programación interpretado, orientado a objetos, dinámicamente tipado y de alto nivel. Este lenguaje es muy atractivo para crear prototipos de forma sencilla y rápida. 
 
-Se ha empleado Python con el IDE \href{https://jupyter.org/}{Jupyter Notebook} programando varias funciones de utilidad para el programador, estas funcionalidades generan código Java automáticamente.
+Se ha empleado Python con el IDE \href{https://jupyter.org/}{Jupyter Notebook} programando varias funciones de utilidad para el programador, una de estas funcionalidades genera código Java automáticamente.
 
 \section{Dependencias externas de Java}
 En este apartado se explicará las librerías externas de Java usadas durante el desarrollo del proyecto. 
