Refactorizado los filtros de usuarios y de las calificaciones

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -58,6 +58,8 @@ label.componentorevent=Component\nEvent
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
+text.nousers=No coincidences
+text.all=All
 text.lastaccess=Last access: 
 text.never=Never
 text.days=Days
@@ -101,6 +103,29 @@ chartlabel.atypicalValue=Atypical Value
 chart.mean=Mean
 
 
+module.assign=Assignment
+module.book=Book
+module.chat=Chat
+module.choice=Choice
+module.data=Database
+module.feedback=Feedback
+module.folder=Folder
+module.forum=Forum
+module.glossary=Glossary
+module.imscp=IMS content package
+module.label=Label
+module.lesson=Lesson
+module.lti=External tool
+module.page=Page
+module.quiz=Quiz
+module.resource=File
+module.scorm=SCORM package
+module.survey=Survey
+module.url=URL
+module.wiki=Wiki
+module.workshop=Workshop
+module.category=Category
+module.manul=Manual item
 
 
 component.activity_report=Activity report
