--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -58,6 +58,9 @@ label.component=Componente:
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
+
+text.nousers=No hay coicidencias
+text.all=Todos
 text.lastaccess=Último acceso: 
 text.never=Nunca
 text.days=días
@@ -98,6 +101,30 @@ chartlabel.firstquartile=Primer Cuartil
 chartlabel.thirdquartile=Tercer Cuartil
 chartlabel.atypicalValue=Valor Atipico
 chart.mean=Media
+
+module.assign=Tarea
+module.book=Libro
+module.chat=Chat
+module.choice=Consulta
+module.data=Base de datos
+module.feedback=Encuesta
+module.folder=Carpeta
+module.forum=Foro
+module.glossary=Glosario
+module.imscp=Paquete de contenido IMS
+module.label=Etiqueta
+module.lesson=Lección
+module.lti=Herramienta externa
+module.page=Página
+module.quiz=Cuestionario
+module.resource=Archivo
+module.scorm=Paquete SCORM
+module.survey=Encuestas predefinidas
+module.url=URL
+module.wiki=Wiki
+module.workshop=Taller
+module.category=Categoría
+module.manul=Ítem manual
 
 
 
