Actualizado el latex

--- a/latex/memoria.tex
+++ b/latex/memoria.tex
@@ -8,6 +8,7 @@
 \usepackage{lmodern} % Scalable font
 \usepackage{microtype}
 \usepackage{placeins}
+\usepackage{float}
 % Bibliography management
 \usepackage[numbers,sort]{natbib}
 
@@ -98,7 +99,7 @@
 %
 % Nuevo comando para tablas pequeñas (menos de una página).
 \newcommand{\tablaSmall}[5]{%
- \begin{table}
+ \begin{table}[H]
   \begin{center}
    \rowcolors {2}{gray!35}{}
    \begin{tabular}{#2}
