--- a/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -41,7 +41,9 @@ Cuando pasaron dos semanas desde el inicio del proyecto, acabé en la tesitura s
 
 Dos de los temores de tomar la decisión de refactorizar fue quedarme a medio camino en la entrega del proyecto o problemas de integración con el vista e interacción con el usuario (front-end).
 
-Finalmente, después de otras dos semanas de reflexión, se decide refactorizar el código de la parte del back-end completamente. Al empezar de nuevo se debe dedicar un esfuerzo extra en el proyecto.
+Finalmente, después de otras dos semanas de reflexión, se decide refactorizar el código de la parte del back-end completamente. Al empezar de nuevo el código se debe dedicar un esfuerzo extra al proyecto.
+
+\section{Error en la función gradereport\_user\_get\_grade\_items}
 
 
 
