--- a/latex/tex/3_Conceptos_teoricos.tex
+++ b/latex/tex/3_Conceptos_teoricos.tex
@@ -9,9 +9,57 @@ En este apartado comentaremos sobre conceptos que aparecen en Moodle.
 //TODO Introduccion a moodle
 
 \subsection{Módulo del curso}
-El módulo del curso\cite{noauthor_course_nodate} (en inglés \textit{course module}) también abreviado como `cm', representa las \textbf{actividades} y \textbf{recursos} del curso (ejemplos en la figura \ref{fig:course_modules}). Estos contienen información sobre qué curso y sección se muestra, además de la configuración de visibilidad y otros datos relevantes. Los identificadores únicos de los módulos del curso se definen como \textbf{`cmid'}. 
+El módulo del curso\cite{noauthor_course_nodate} (en inglés \textit{course module}) también abreviado como `cm', representa las \textbf{actividades} y \textbf{recursos} del curso (ejemplos en la figura \ref{fig:course_modules}). Estos contienen información sobre qué curso y sección se muestra, además de la configuración de visibilidad y otros datos relevantes. 
 
 \imagen{course_modules}{Ejemplos de módulos del curso que actividades y recursos.}
+
+Los identificadores únicos de los módulos del curso se definen como \textbf{`cmid'} y cada tipo de módulo del curso posee un código nemotécnico.
+
+
+\subsubsection{Códigos nemotécnicos de los tipos de módulos del curso}
+
+Existen dos formas de buscar el código nemotécnico de un módulo del curso:
+\begin{itemize}
+	\item A través de la función de servicio web \textbf{\textit{core\_course\_get\_contents}} que devuelve los módulos que hay en la página principal del curso y contiene un campo de tipo de módulo.
+	
+	\imagen{modname}{Extracto de la función del servicio web}
+	\item Mediante el enlace al crear un módulo del curso.
+	\imagen{modnamelink}{Enlace que se genera mientras se crea el módulo}
+	
+\end{itemize}
+
+\subsubsection{Tipos de módulos del curso}
+
+En la tabla \ref{tabla:herramientasportipodeuso} muestra los diferentes tipos de módulos que se han encontrado en Moodle.
+
+
+\tablaSmall{Herramientas y tecnologías utilizadas en cada parte del proyecto}{l c c c c}{herramientasportipodeuso}
+{ \multicolumn{1}{l}{Código nemotécnico} & Nombre en español & Nombre en inglés \\}{ 
+assign             & Tarea                    & Assignment          \\
+book               & Libro                    & Book                \\
+chat               & Chat                     & Chat                \\
+choice             & Consulta                 & Choice              \\
+data               & Base de datos            & Database            \\
+feedback           & Encuesta                 & Feedback            \\
+folder             & Carpeta                  & Folder              \\
+forum              & Foro                     & Forum               \\
+glossary           & Glosario                 & Glossary            \\
+imscp              & Paquete de contenido IMS & IMS content package \\
+label              & Etiqueta                 & Label               \\
+lesson             & Lección                  & Lesson              \\
+lti                & Herramienta externa      & External tool       \\
+page               & Página                   & Page                \\
+quiz               & Cuestionario             & Quiz                \\
+resource           & Archivo                  & File                \\
+scorm              & Paquete SCORM            & SCORM package       \\
+survey             & Encuestas predefinidas   & Survey              \\
+url                & URL                      & URL                 \\
+wiki               & Wiki                     & Wiki                \\
+workshop           & Taller                   & Workshop            \\
+} 
+
+
+
 
 \subsection{Ítem de calificación}
 El Ítem de calificación\cite{noauthor_grade_nodate} (en inglés \textit{Grade item}), es cada fila de la tabla de calificaciones.
