Actualizado la memoria

--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -1,11 +1,11 @@
 
-@misc{armengol_aplicacion_2017,
+@misc{fernandez_armengol_aplicacion_2017,
 	title = {Aplicación de escritorio para visualizar y comparar la actividad de los distintos usuarios de {Moodle} en los cursos. {La} herramienta debe permitir la integración con {UBUVirtual}. {Tecnologías}: {Java}, {Ja}..},
 	copyright = {EPL-1.0},
 	shorttitle = {Aplicación de escritorio para visualizar y comparar la actividad de los distintos usuarios de {Moodle} en los cursos. {La} herramienta debe permitir la integración con {UBUVirtual}. {Tecnologías}},
 	url = {https://github.com/trona85/GII-17.1B-UBULog-1.0},
 	urldate = {2019-05-20},
-	author = {Armengol, Oscar Fernández},
+	author = {Fernández Armengol, Oscar Fernández},
 	month = dec,
 	year = {2017},
 	note = {original-date: 2017-10-09T13:32:44Z}
@@ -184,4 +184,60 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	month = apr,
 	year = {2016},
 	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\8UFE8SMV\\web-scraping-introduccion-y-herramientas.html:text/html}
+}
+
+@misc{noauthor_what_nodate,
+	title = {What is back-end application? definition and meaning},
+	shorttitle = {What is back-end application?},
+	url = {http://www.businessdictionary.com/definition/back-end-application.html},
+	abstract = {Definition of back-end application: Computer program (such as server software) that remains in the background, or resides on a server located in a back room. A user, generally, interfaces only with a front-end application and rarely (if ...},
+	language = {en},
+	urldate = {2019-06-16},
+	journal = {BusinessDictionary.com},
+	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\3Y3IVLUR\\back-end-application.html:text/html}
+}
+
+@misc{zadok_[mdl-64298]_nodate,
+	title = {[{MDL}-64298] gradereport\_user\_get\_grade\_items fails when "{Course} {Grade} {Settings}" when "{Show} {Feedback}" is set to "{False}" for user reports - {Moodle} {Tracker}},
+	url = {https://tracker.moodle.org/browse/MDL-64298},
+	urldate = {2019-06-17},
+	author = {Zadok, Kin},
+	file = {[MDL-64298] gradereport_user_get_grade_items fails when "Course Grade Settings" when "Show Feedback" is set to "False" for user reports - Moodle Tracker:C\:\\Users\\PC\\Zotero\\storage\\BZ5AZQJ8\\MDL-64298.html:text/html}
+}
+
+@misc{noauthor_plugins_nodate,
+	title = {Plugins · {Chart}.js documentation},
+	url = {https://www.chartjs.org/docs/latest/developers/plugins.html},
+	urldate = {2019-06-17},
+	file = {Plugins · Chart.js documentation:C\:\\Users\\PC\\Zotero\\storage\\2FRZYAPJ\\plugins.html:text/html}
+}
+
+@misc{noauthor_chartjs-plugin-datalabels_nodate,
+	title = {chartjs-plugin-datalabels},
+	url = {https://chartjs-plugin-datalabels.netlify.com/},
+	urldate = {2019-06-17},
+	file = {chartjs-plugin-datalabels:C\:\\Users\\PC\\Zotero\\storage\\5J4SBHDX\\chartjs-plugin-datalabels.netlify.com.html:text/html}
+}
+
+@misc{noauthor_bar_2019,
+	title = {Bar {Funnel} {Chart} extension for {Chart}.js. {Contribute} to chartjs/{Chart}.{BarFunnel}.js development by creating an account on {GitHub}},
+	copyright = {MIT},
+	url = {https://github.com/chartjs/Chart.BarFunnel.js},
+	urldate = {2019-06-17},
+	publisher = {Chart.js},
+	month = jun,
+	year = {2019},
+	note = {original-date: 2016-05-20T02:45:18Z}
+}
+
+@misc{y-takey_this_2019,
+	title = {This plugin for {Chart}.js that makes your bar chart to 100\% stacked bar chart.: y-takey/chartjs-plugin-stacked100},
+	copyright = {MIT},
+	shorttitle = {This plugin for {Chart}.js that makes your bar chart to 100\% stacked bar chart.},
+	url = {https://github.com/y-takey/chartjs-plugin-stacked100},
+	urldate = {2019-06-17},
+	author = {y-takey},
+	month = jun,
+	year = {2019},
+	note = {original-date: 2017-03-23T06:43:40Z}
 }
