--- a/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -37,6 +37,12 @@ Lenguaje de programación orientado a páginas web, usado principalmente en el l
 
 En el proyecto se sigue usando Charts.js para la visualización las nuevas gráficas.
 
+\section{CodePen}
+\href{https://codepen.io}{CodePen} es una herramienta web que permite crear prototipos de páginas HTML, CSS y JavaScript y ver los resultados en tiempo real.
+
+Usado para probar prototipos de gráficas con los registros del curso.
+
+
 \section{JSON}
 
 \textit{JavaScript Object Notation (JSON)}, formato de texto sencillo para el intercambio de datos. En principio se usaba como subconjunto de notación en JavaScript pero debido a su masiva popularidad en otros ámbitos, se considera hoy en día como lenguaje independiente.
